feat: add Playwright test profiles and update .gitignore for node_modules